# MStockApp

./: .gitignore  CMakeLists.txt  MainWindow.h  README.md  test.py
python/: fetch_stock.py
python_scripts/: stock_data.py
src/: GraphWidget.cpp  GraphWidget.h  PythonBridge.h  main.cpp
src/ui/: MStock.ui  mstock.cpp  mstock.h
ui/: MainWindow.cpp  MainWindow.h
